# parabola-OpenGL

./: .gitignore  CMakeLists.txt  README.md
include/: shader.hpp  texture.hpp
include/glad/: glad.h
lib/i686/lib/cmake/glfw3/: glfw3Targets.cmake
parabola/: parabola.sln
parabola/parabola-OpenGL/: glad.c  main.cpp  parabola-OpenGL.vcxproj
src/: main.cpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
